tests/cmd_solve_hanging.out
./cmd_solve_hanging.svx:4: info: Survey has no fixed points. Therefore I've fixed a.1 at (0,0,0)

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
cavern: error: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./cmd_solve_hanging.svx:8: info: b.3
